fix: update link styles for improved contrast in non-white bg

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -134,7 +134,7 @@
   }
 
   .link {
-    @apply text-jsr-cyan-700 hover:text-jsr-cyan-600 underline
+    @apply text-jsr-cyan-700 hover:text-jsr-cyan-900 underline
       outline-none focus-visible:ring-2 ring-jsr-cyan-700 ring-offset-2 rounded-sm;
   }
 
@@ -213,6 +213,10 @@ body .ddoc .markdown :not(pre) > code {
   @apply bg-slate-50 border-slate-300 rounded-md;
 }
 
+body .ddoc .markdown_summary a:not(.no_color) {
+  @apply link;
+}
+
 body .ddoc .markdown a:not(.no_color) {
   @apply link;
 }
@@ -261,7 +265,7 @@ body .ddoc .namespaceSection .namespaceItem {
 }
 
 .ddoc .markdown_summary :not(pre) > code {
-  @apply bg-jsr-cyan-100/70 !important;
+  @apply bg-jsr-cyan-100/50 !important;
   @apply px-1.5 !important;
 }
 
